* Thu Jul 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.2-0
- Added OEL and Puppet 5 support

* Thu Jun 14 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.1-0
- Update systemd fixtures and CI assets
- Add logging for exportfs failures
- Ensure that reexports happen after the NFS service has been started

* Mon Apr 16 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.1-0
- Added `nfs::client::mount::autodetect_remote` to override all autodetection
  of whether or not the remote host was the current NFS server so an NFS
  server can mount NFS directories from other servers.
- Added `nfs::client::mount::stunnel` to allow users to dictate the stunnel
  connection state for specific mounts.

* Wed Apr 04 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.1-0
- On systemd systems, the stunnel service is now a dependency of the NFS
  servers and mounts managed by this module.

* Mon Feb 12 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- Update upperbound on puppetlabs/concat version to < 5.0.0

* Wed Dec 13 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.0-0
- Changed all stunnel connections to use 'stunnel::instance' methods so that
  they are not interrupted by an issue with the global stunnel configuration
  and they can set the TCP_NODELAY option as suggested for small transaction,
  high bandwidth connections.
- Added parameters to allow users to tweak the stunnel socket options for all
  NFS stunnel connections.
- Added support for OEL and Puppet 5

* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.4-0
- Update concat version in metadata.json

* Mon Apr 24 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.3-0
- gssproxy ensured running when secure_nfs is true, el > 7.1
- Confine puppet version in metadata.json

* Tue Apr 11 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.3-0
- nfs_anon_write selboolean is only applied if selinux is on.

* Thu Mar 23 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.2-0